Fixed bug 188095: Z on the end of time stamp ignored. time zone misinterpreted.